fix: Display history is no longer cropped

--- a/index.css
+++ b/index.css
@@ -33,6 +33,7 @@ body {
 
 .hide-scroll {
   height: 100%;
+  padding-bottom: 10px;
 
   overflow: hidden;
 }
